@@ -14,6 +14,7 @@
   <include file="timelines.zcml" />
   <include file="subscribers.zcml" />
   <include file="sharing.zcml" />
+  <include file="behavior.zcml" />
   <include file="upgrades.zcml" />
 
   <include package=".browser" />
