@@ -1,5 +1,5 @@
 <metadata>
- <version>1008</version>
+ <version>1009</version>
  <dependencies>
   <dependency>profile-plone.app.dexterity:default</dependency>
   <dependency>profile-plone.app.relationfield:default</dependency>
