@@ -32,6 +32,7 @@
   <element value="plone.app.content.interfaces.INameFromTitle"/>
   <element value="plone.app.dexterity.behaviors.exclfromnav.IExcludeFromNavigation"/>
   <element value="plone.app.relationfield.behavior.IRelatedItems"/>
+  <element value="collective.simplemanagement.interfaces.ordernumber.IOrderNumber" />
  </property>
  <property name="schema">collective.simplemanagement.interfaces.IProject</property>
  <property name="model_source"></property>
